--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@react-aria/utils": "^3.25.2",
-    "@react-stately/utils": "^3.10.3",
+    "@react-aria/utils": "^3.25.3",
+    "@react-stately/utils": "^3.10.4",
     "@remix-run/cloudflare": "^2.12.1",
     "@remix-run/cloudflare-pages": "^2.12.1",
     "@remix-run/react": "^2.12.1",
@@ -35,6 +35,7 @@
     "babel-plugin-react-compiler": "0.0.0-experimental-7449567-20240905",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.32.2",
     "drizzle-valibot": "^0.2.0",
     "html-rewriter-wasm": "^0.4.1",
@@ -44,19 +45,19 @@
     "lucide-react": "^0.417.0",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
-    "react": "19.0.0-rc-a03254bc-20240905",
-    "react-aria": "^3.34.3",
-    "react-aria-components": "^1.3.3",
-    "react-dom": "19.0.0-rc-a03254bc-20240905",
+    "react": "19.0.0-rc-1460d67c-20241003",
+    "react-aria": "^3.35.0",
+    "react-aria-components": "^1.4.0",
+    "react-dom": "19.0.0-rc-1460d67c-20241003",
     "react-icons": "^5.3.0",
-    "react-is": "19.0.0-rc-a03254bc-20240905",
+    "react-is": "19.0.0-rc-1460d67c-20241003",
     "react-markdown": "^9.0.1",
     "recharts": "2.13.0-alpha.5",
     "remix-auth": "^3.7.0",
     "remix-themes": "^1.5.1",
     "sonner": "^1.5.0",
     "sonyflake": "^1.1.2",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
@@ -65,7 +66,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@cloudflare/workers-types": "^4.20240925.0",
+    "@cloudflare/workers-types": "^4.20241004.0",
     "@remix-run/dev": "^2.12.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -74,10 +75,10 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.24.2",
     "postcss": "^8.4.47",
-    "remix-development-tools": "^4.6.0",
+    "remix-development-tools": "^4.7.1",
     "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.13",
-    "tailwindcss-react-aria-components": "^1.1.5",
+    "tailwindcss-react-aria-components": "^1.1.6",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
