--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/cloudflare-pages": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/server-runtime": "^2.12.1",
+    "@sentry/cloudflare": "^8.34.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/typography": "^0.5.15",
@@ -54,6 +55,9 @@
     "react-markdown": "^9.0.1",
     "recharts": "2.13.0-alpha.5",
     "remix-auth": "^3.7.0",
+    "remix-auth-github": "^2.0.0",
+    "remix-auth-google": "^2.0.0",
+    "remix-auth-twitter": "^2.1.0",
     "remix-themes": "^1.5.1",
     "sonner": "^1.5.0",
     "sonyflake": "^1.1.2",
