--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@react-aria/utils": "^3.25.3",
     "@react-stately/utils": "^3.10.4",
-    "@remix-run/cloudflare": "^2.12.1",
-    "@remix-run/cloudflare-pages": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
-    "@remix-run/server-runtime": "^2.12.1",
+    "@remix-run/cloudflare": "^2.13.1",
+    "@remix-run/cloudflare-pages": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/server-runtime": "^2.13.1",
     "@sentry/cloudflare": "^8.34.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
@@ -37,21 +37,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "drizzle-valibot": "^0.2.0",
     "html-rewriter-wasm": "^0.4.1",
     "isbot": "^4.4.0",
-    "jose": "^5.9.3",
+    "jose": "^5.9.4",
     "jotai": "^2.10.0",
     "lucide-react": "^0.417.0",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
-    "react": "19.0.0-rc-1460d67c-20241003",
+    "react": "19.0.0-rc-cd22717c-20241013",
     "react-aria": "^3.35.0",
     "react-aria-components": "^1.4.0",
-    "react-dom": "19.0.0-rc-1460d67c-20241003",
+    "react-dom": "19.0.0-rc-cd22717c-20241013",
     "react-icons": "^5.3.0",
-    "react-is": "19.0.0-rc-1460d67c-20241003",
+    "react-is": "19.0.0-rc-cd22717c-20241013",
     "react-markdown": "^9.0.1",
     "recharts": "2.13.0-alpha.5",
     "remix-auth": "^3.7.0",
@@ -70,21 +71,21 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@cloudflare/workers-types": "^4.20241004.0",
-    "@remix-run/dev": "^2.12.1",
+    "@cloudflare/workers-types": "^4.20241011.0",
+    "@metronome-sh/dev-error-boundary": "^0.0.10",
+    "@remix-run/dev": "^2.13.1",
+    "@remix-run/node": "^2.13.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.24.2",
     "postcss": "^8.4.47",
-    "remix-development-tools": "^4.7.1",
+    "remix-development-tools": "^4.7.3",
     "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.13",
     "tailwindcss-react-aria-components": "^1.1.6",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8",
     "vite-tsconfig-paths": "^4.3.2",
     "wrangler": "3.57.1"
