--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate": "tsx drizzle/migrate.ts"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.25.7",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
